修复无法热更新类的bug